--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,8 +32,16 @@ android {
     buildFeatures {
         viewBinding = true
     }
+
+    buildTypes.each {
+        Properties properties = new Properties()
+        properties.load(project.rootProject.file("app.properties").newDataInputStream())
+        def nasaApiKey = properties.getProperty("NASA_API_KEY", "")
+        it.buildConfigField "String", "NASA_API_KEY", nasaApiKey
+    }
     namespace 'com.example.materialdesign'
 }
+
 
 dependencies {
     implementation 'androidx.core:core-ktx:1.7.0'
