5) добавили BottomNavigationView, бейдж с числом и удаляем бейдж по клику на нужном элементе

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,10 @@
             android:exported="true">
 
         </activity>
+        <activity android:name=".view.navigation.BottomNavigationActivity"
+            android:exported="true">
+
+        </activity>
     </application>
 
 </manifest>
