--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,4 +66,6 @@ dependencies {
     implementation 'androidx.fragment:fragment-ktx:1.4.1'
     //kotlin coroutines
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.1'
+    // viewPager2
+    //implementation 'androidx.viewpager2:viewpager2:1.0.0'
 }
