--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,8 +27,11 @@
         </activity>
         <activity android:name=".view.navigation.BottomNavigationActivity"
             android:exported="true">
-
         </activity>
+        <activity android:name=".view.layout_maket.LayoutActivity"
+            android:exported="true">
+        </activity>
+
     </application>
 
 </manifest>
