--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,9 @@
         <activity android:name=".view.layout_maket.LayoutActivity"
             android:exported="true">
         </activity>
+        <activity android:name=".view.layout_maket.animations.AnimationActivity"
+            android:exported="true">
+        </activity>
 
     </application>
 
