--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,9 @@
         <activity android:name=".view.layout_maket.animations.AnimationActivityExplode"
             android:exported="true">
         </activity>
+        <activity android:name=".view.layout_maket.animations.AnimationActivityZoom"
+            android:exported="true">
+        </activity>
 
     </application>
 
