ДЗ№5 5) случайная сортировка объектов через setTransitionName путем присвоения id.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,9 @@
         <activity android:name=".view.layout_maket.animations.AnimationActivityZoom"
             android:exported="true">
         </activity>
+        <activity android:name=".view.layout_maket.animations.AnimationActivityResort"
+            android:exported="true">
+        </activity>
 
     </application>
 
