ДЗ№5 6) Анимация выезжающих меню опций при нажатии FAB через ObjectAnimator и View.animate.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,6 +43,9 @@
         <activity android:name=".view.layout_maket.animations.AnimationActivityResort"
             android:exported="true">
         </activity>
+        <activity android:name=".view.layout_maket.animations.AnimationActivityFabRotation"
+            android:exported="true">
+        </activity>
 
     </application>
 
