--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,6 +46,9 @@
         <activity android:name=".view.layout_maket.animations.AnimationActivityFabRotation"
             android:exported="true">
         </activity>
+        <activity android:name=".view.layout_maket.animations.AnimationActivityElevation"
+            android:exported="true">
+        </activity>
 
     </application>
 
