ДЗ№5 8) Анимация ConstraintSet через клонирование макета

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,6 +49,9 @@
         <activity android:name=".view.layout_maket.animations.AnimationActivityElevation"
             android:exported="true">
         </activity>
+        <activity android:name=".view.layout_maket.animations.AnimationActivityBonus"
+            android:exported="true">
+        </activity>
 
     </application>
 
