ДЗ№6 Создали заготовку для работы с Recycler.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -52,6 +52,9 @@
         <activity android:name=".view.layout_maket.animations.AnimationActivityBonus"
             android:exported="true">
         </activity>
+        <activity android:name=".view.recycler_view.RecyclerActivity"
+            android:exported="true">
+        </activity>
 
     </application>
 
