ДЗ№8 3) добавил еще одну активити для реализации примеров

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -62,6 +62,9 @@
         <activity android:name=".view.recycler_view.RecyclerActivity"
             android:exported="true">
         </activity>
+        <activity android:name=".view.ux.UXActivity"
+            android:exported="true">
+        </activity>
 
     </application>
 
